<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnrolldice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/btnThrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/imgdices"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="376dp"
        android:contentDescription="@string/imgdicescontent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/empty_dice" />

    <Button
        android:id="@+id/btnRollall4dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/btnThrow4dice"
        app:layout_constraintBottom_toTopOf="@+id/btnrolldice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgdices2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/imgdicescontent2"
        app:layout_constraintBottom_toTopOf="@+id/imgdices"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/empty_dice" />

    <ImageView
        android:id="@+id/imgdices3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="376dp"
        android:contentDescription="@string/imgdicescontent3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/imgdices"
        app:srcCompat="@drawable/empty_dice" />

    <ImageView
        android:id="@+id/imgdices4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/imgdicescontent"
        app:layout_constraintBottom_toTopOf="@+id/imgdices3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toEndOf="@+id/imgdices2"
        app:srcCompat="@drawable/empty_dice" />

    <Button
        android:id="@+id/btnDeletedice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/btnDeletedice"
        app:layout_constraintBottom_toTopOf="@+id/btnRollall4dice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>